[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orangutan"
version = "0.0.3"
description = "Automatic API Inspection and Adaptation System"
readme = "README.md"
license = { text = "MIT License" }
authors = [
    { name = "Joseph M Courtney", email = "joseph.m.courtney@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "openapi-generator-cli",
    "pystache",
    "pydantic",
    "tenacity",
    "pytest",
    "pytest-httpserver",
    "vcrpy",
    "celery",
    "sqlmodel",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest-cov",
    "commitizen",
    "pre-commit",
    "types-requests",
    "hatch",
    "twine",
]

[tool.hatch.build.targets.sdist]
packages = ["src/orangutan"]
include = ["README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/orangutan"]
include = ["README.md", "LICENSE", "pyproject.toml", "scripts/**"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "./scripts/pre_build.py"

[tool.ruff]
extend = "~/.config/ruff/ruff.toml"
target-version = "py312"

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "D"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/orangutan"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
